# aquamarine

./: .clang-format  CMakeLists.txt
include/: CMakeLists.txt
include/memory/: handle_view.hpp  unique_handle.hpp
include/utils/: optional.hpp  traits.hpp
src/: main.cpp
